# bookstore

./: Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: build.yml
bookstore/: settings.py  urls.py  views.py
bookstore/bookstore/: settings.py
order/Serializers/: __init__.py  order_Serializers.py
order/migrations/: 0001_initial.py
order/tests/test_serializers/: test_order_serializer.py
order/tests/test_viewsets/: test_order_viewset.py
order/viewsets/: order_viewset.py
product/: tests.py
product/Serializers/: __init__.py  product_Serializers.py
product/migrations/: 0001_initial.py
product/models/: category.py  product.py
product/tests/test_serializers/: test_category_serializer.py  test_product_serializer.py
product/tests/test_viewsets/: test_category_viewset.py
product/viewsets/: category_viewset.py  product_viewset.py
